fix(ui): few overflow issues

--- a/app/public/tailwind.css
+++ b/app/public/tailwind.css
@@ -428,6 +428,12 @@
   .left-8 {
     left: calc(var(--spacing) * 8);
   }
+  .z-1 {
+    z-index: 1;
+  }
+  .z-2 {
+    z-index: 2;
+  }
   .z-10 {
     z-index: 10;
   }
@@ -1296,6 +1302,9 @@
   }
   .overflow-x-hidden {
     overflow-x: hidden;
+  }
+  .overflow-x-scroll {
+    overflow-x: scroll;
   }
   .overflow-y-auto {
     overflow-y: auto;
